# ChangeLog for app-text/bibutils
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-text/bibutils/ChangeLog,v 1.6 2009/07/26 00:59:36 bicatali Exp $

*bibutils-4.2 (26 Jul 2009)

  26 Jul 2009; Sébastien Fabbro <bicatali@gentoo.org>
  -bibutils-3.27.ebuild, +bibutils-4.2.ebuild:
  Version bump and fixed parallel compilation

*bibutils-3.40 (12 Feb 2008)

  12 Feb 2008; Markus Dittrich <markusle@gentoo.org> bibutils-3.27.ebuild,
  +bibutils-3.40.ebuild:
  Version bump (see bug #179194).

  26 Apr 2007; Steve Dibb <beandog@gentoo.org> bibutils-3.27.ebuild:
  add ~amd64, bug 176140

  27 Oct 2006; Chris White <chriswhite@gentoo.org> bibutils-3.27.ebuild:
  Adding ~ppc keywords per bug #152979.

  17 Oct 2006; Donnie Berkholz <dberkholz@gentoo.org>; metadata.xml:
  Slide into sci herd.

*bibutils-3.27 (15 Oct 2006)

  15 Oct 2006; Donnie Berkholz <dberkholz@gentoo.org>; +metadata.xml,
  +bibutils-3.27.ebuild:
  New package: Interconverts between various bibliography formats using a
  common XML intermediate.
