@@ -1,6 +1,11 @@
 # ChangeLog for app-text/bibutils
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/bibutils/ChangeLog,v 1.6 2009/07/26 00:59:36 bicatali Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-text/bibutils/ChangeLog,v 1.7 2009/11/08 12:59:44 patrick Exp $
+
+*bibutils-4.6 (08 Nov 2009)
+
+  08 Nov 2009; Patrick Lauer <patrick@gentoo.org> +bibutils-4.6.ebuild:
+  Bump
 
 *bibutils-4.2 (26 Jul 2009)
 
